[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Editor/EditorTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/Editor/Editor.gd" type="Script" id=2]
[ext_resource path="res://src/Editor/ResizeWindow.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Editor/Tiles.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Editor/TileSet.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Editor/Levels.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Editor/Inspector.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Editor/Enemies.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Editor/Props.tscn" type="PackedScene" id=9]

[node name="Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 488.0
margin_bottom = 186.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Secondary" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 704.0
margin_top = 16.0
margin_right = 952.0
margin_bottom = 464.0
mouse_filter = 1

[node name="Inspector" parent="Secondary" instance=ExtResource( 7 )]
margin_right = 248.0
margin_bottom = 448.0

[node name="Main" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 264.0
header_size = 16
bar_size = 16

[node name="Tab" type="TabContainer" parent="Main"]
margin_right = 256.0
margin_bottom = 264.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tiles" parent="Main/Tab" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 30.0
margin_right = -16.0
margin_bottom = -16.0

[node name="TileSet" parent="Main/Tab" instance=ExtResource( 5 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 30.0
margin_right = -16.0
margin_bottom = -16.0
mouse_filter = 2

[node name="Levels" parent="Main/Tab" instance=ExtResource( 6 )]
visible = false
margin_left = 16.0
margin_top = 30.0
margin_right = -16.0
margin_bottom = -16.0

[node name="Enemies" parent="Main/Tab" instance=ExtResource( 8 )]
visible = false
margin_left = 16.0
margin_top = 30.0
margin_right = -16.0
margin_bottom = -16.0

[node name="Props" parent="Main/Tab" instance=ExtResource( 9 )]
visible = false

[connection signal="enemy_selected" from="." to="Secondary/Inspector" method="on_selected" binds= [ "enemy" ]]
[connection signal="level_saved" from="." to="Main/Tab/Levels" method="on_save"]
[connection signal="prop_selected" from="." to="Secondary/Inspector" method="on_selected" binds= [ "prop" ]]
[connection signal="tab_changed" from="Main/Tab" to="." method="on_tab_changed"]
[connection signal="autolayer_updated" from="Main/Tab/Tiles" to="." method="_on_TileSetMenu_autolayer_updated"]
[connection signal="multi_erase_toggled" from="Main/Tab/Tiles" to="." method="_on_TileSetMenu_multi_erase_toggled"]
[connection signal="tile_selection_updated" from="Main/Tab/Tiles" to="." method="_on_TileSetMenu_tile_selection_updated"]
[connection signal="collision_updated" from="Main/Tab/TileSet" to="." method="_on_TileSet_collision_updated"]
[connection signal="image_loaded" from="Main/Tab/TileSet" to="." method="_on_TileSet_image_loaded"]
[connection signal="tile_set_loaded" from="Main/Tab/TileSet" to="." method="on_tile_set_loaded"]
[connection signal="tile_set_saved" from="Main/Tab/TileSet" to="." method="on_tile_set_saved"]
